# parcelposedetector

./: CMakeLists.txt  Camera.cpp  Camera.h  CameraConstants.h  output.ply  revised_parcel.ply  test.cpp
